// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Icon Toggle Button Snapshot Toggle buttons with RTL true, with disabled item (using value for value) 1`] = `
.emotion-12 .emotion-2 {
  border-radius: 0;
  border-width: 1px;
  margin-left: -1px;
}

.emotion-12 .emotion-2:first-child {
  border-top-left-radius: 4px;
  border-bottom-left-radius: 4px;
  margin-left: 0;
}

.emotion-12 .emotion-2:last-child {
  border-top-right-radius: 4px;
  border-bottom-right-radius: 4px;
}

.emotion-12 .emotion-2:focus {
  border-radius: 4px;
  z-index: 1;
  -webkit-animation: none;
  animation: none;
  -webkit-transition: all 120ms,border-radius 1ms;
  transition: all 120ms,border-radius 1ms;
}

.emotion-4 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-size: 13px;
  border-radius: 50%;
  border: 1px solid transparent;
  box-shadow: none;
  position: relative;
  cursor: pointer;
  outline: none;
  -webkit-transition: all 120ms linear;
  transition: all 120ms linear;
  border-width: 0px;
  border-radius: 4px;
  width: 32px;
  height: 32px;
  background-color: #f0f1f2;
  border-color: #ced3d9;
  width: 40px;
  height: 40px;
  background-color: #0875e1;
  border-color: #0875e1;
}

.emotion-4:hover:active {
  -webkit-transition-duration: 40ms;
  transition-duration: 40ms;
}

.emotion-4:disabled,
.emotion-4:disabled:active {
  cursor: default;
  box-shadow: none;
}

.emotion-4 .wd-icon {
  display: inline-block;
  vertical-align: middle;
}

.emotion-4 span .wd-icon-fill,
.emotion-4 span .wd-icon-accent {
  -webkit-transition: fill 120ms ease-in;
  transition: fill 120ms ease-in;
  fill: #7b858f;
}

.emotion-4:focus span .wd-icon-fill,
.emotion-4:focus span .wd-icon-accent {
  fill: #7b858f;
}

.emotion-4:hover:focus {
  background-color: #dfe2e6;
}

.emotion-4:active,
.emotion-4:focus:active,
.emotion-4:hover:active {
  background-color: #ced3d9;
}

.emotion-4:hover {
  background-color: #dfe2e6;
}

.emotion-4:hover span .wd-icon-fill,
.emotion-4:hover span .wd-icon-accent {
  fill: #333d47;
}

.emotion-4:disabled,
.emotion-4:active:disabled,
.emotion-4:focus:disabled,
.emotion-4:hover:disabled {
  background-color: #f6f7f8;
}

.emotion-4:disabled span .wd-icon-fill,
.emotion-4:active:disabled span .wd-icon-fill,
.emotion-4:focus:disabled span .wd-icon-fill,
.emotion-4:hover:disabled span .wd-icon-fill,
.emotion-4:disabled span .wd-icon-accent,
.emotion-4:active:disabled span .wd-icon-accent,
.emotion-4:focus:disabled span .wd-icon-accent,
.emotion-4:hover:disabled span .wd-icon-accent {
  fill: #b9c0c7;
}

.emotion-4:not([disabled]):focus,
.emotion-4:not([disabled]):active {
  -webkit-animation: animation-1h1pob6 100ms;
  animation: animation-1h1pob6 100ms;
  box-shadow: 0 0 0 2px #ffffff,0 0 0 4px #0875e1;
}

.emotion-4:focus.emotion-4:hover,
.emotion-4:focus,
.emotion-4:active {
  background-color: #0875e1;
}

.emotion-4:focus.emotion-4:hover:focus span .wd-icon-fill,
.emotion-4:focus:focus span .wd-icon-fill,
.emotion-4:active:focus span .wd-icon-fill,
.emotion-4:focus.emotion-4:hover:hover span .wd-icon-fill,
.emotion-4:focus:hover span .wd-icon-fill,
.emotion-4:active:hover span .wd-icon-fill,
.emotion-4:focus.emotion-4:hover span .wd-icon-fill,
.emotion-4:focus span .wd-icon-fill,
.emotion-4:active span .wd-icon-fill {
  fill: #ffffff;
}

.emotion-4:focus.emotion-4:hover:focus span .wd-icon-accent,
.emotion-4:focus:focus span .wd-icon-accent,
.emotion-4:active:focus span .wd-icon-accent,
.emotion-4:focus.emotion-4:hover:hover span .wd-icon-accent,
.emotion-4:focus:hover span .wd-icon-accent,
.emotion-4:active:hover span .wd-icon-accent,
.emotion-4:focus.emotion-4:hover span .wd-icon-accent,
.emotion-4:focus span .wd-icon-accent,
.emotion-4:active span .wd-icon-accent {
  fill: #ffffff;
}

.emotion-4:not([disabled]):focus {
  -webkit-animation: animation-1h1pob6 100ms;
  animation: animation-1h1pob6 100ms;
  box-shadow: 0 0 0 2px #ffffff,0 0 0 4px #0875e1;
}

.emotion-4:hover {
  background-color: #005cb9;
}

.emotion-4:focus span .wd-icon-fill,
.emotion-4:hover span .wd-icon-fill,
.emotion-4 span .wd-icon-fill {
  fill: #ffffff;
}

.emotion-4:focus span .wd-icon-accent,
.emotion-4:hover span .wd-icon-accent,
.emotion-4 span .wd-icon-accent {
  fill: #ffffff;
}

.emotion-0 {
  display: inline-block;
}

.emotion-0 svg {
  display: block;
}

.emotion-0 .wd-icon-fill {
  fill: #7b858f;
}

.emotion-0:hover .wd-icon-fill {
  fill: #333d47;
}

.emotion-0 .wd-icon-accent {
  fill: #7b858f;
}

.emotion-0:hover .wd-icon-accent {
  fill: #333d47;
}

.emotion-0 .wd-icon-background {
  fill: transparent;
}

.emotion-0:hover .wd-icon-background {
  fill: transparent;
}

.emotion-1 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-size: 13px;
  border-radius: 50%;
  border: 1px solid transparent;
  box-shadow: none;
  position: relative;
  cursor: pointer;
  outline: none;
  -webkit-transition: all 120ms linear;
  transition: all 120ms linear;
  border-width: 0px;
  border-radius: 4px;
  width: 32px;
  height: 32px;
  background-color: #f0f1f2;
  border-color: #ced3d9;
  width: 40px;
  height: 40px;
}

.emotion-1:hover:active {
  -webkit-transition-duration: 40ms;
  transition-duration: 40ms;
}

.emotion-1:disabled,
.emotion-1:disabled:active {
  cursor: default;
  box-shadow: none;
}

.emotion-1 .wd-icon {
  display: inline-block;
  vertical-align: middle;
}

.emotion-1 span .wd-icon-fill,
.emotion-1 span .wd-icon-accent {
  -webkit-transition: fill 120ms ease-in;
  transition: fill 120ms ease-in;
  fill: #7b858f;
}

.emotion-1:focus span .wd-icon-fill,
.emotion-1:focus span .wd-icon-accent {
  fill: #7b858f;
}

.emotion-1:hover:focus {
  background-color: #dfe2e6;
}

.emotion-1:active,
.emotion-1:focus:active,
.emotion-1:hover:active {
  background-color: #ced3d9;
}

.emotion-1:hover {
  background-color: #dfe2e6;
}

.emotion-1:hover span .wd-icon-fill,
.emotion-1:hover span .wd-icon-accent {
  fill: #333d47;
}

.emotion-1:disabled,
.emotion-1:active:disabled,
.emotion-1:focus:disabled,
.emotion-1:hover:disabled {
  background-color: #f6f7f8;
}

.emotion-1:disabled span .wd-icon-fill,
.emotion-1:active:disabled span .wd-icon-fill,
.emotion-1:focus:disabled span .wd-icon-fill,
.emotion-1:hover:disabled span .wd-icon-fill,
.emotion-1:disabled span .wd-icon-accent,
.emotion-1:active:disabled span .wd-icon-accent,
.emotion-1:focus:disabled span .wd-icon-accent,
.emotion-1:hover:disabled span .wd-icon-accent {
  fill: #b9c0c7;
}

.emotion-1:not([disabled]):focus,
.emotion-1:not([disabled]):active {
  -webkit-animation: animation-1h1pob6 100ms;
  animation: animation-1h1pob6 100ms;
  box-shadow: 0 0 0 2px #ffffff,0 0 0 4px #0875e1;
}

<div
  className="emotion-12 emotion-13"
>
  <button
    aria-label="Percent View"
    aria-pressed={false}
    className="emotion-1 emotion-2"
    onClick={[Function]}
    value="percent-view"
  >
    <span
      className="emotion-0"
      dangerouslySetInnerHTML={
        Object {
          "__html": "<svg xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"24\\" height=\\"24\\" class=\\"wd-icon-percentage wd-icon\\" focusable=\\"false\\" role=\\"presentation\\" viewBox=\\"0 0 24 24\\"><g fill-rule=\\"evenodd\\" class=\\"wd-icon-container\\"><path d=\\"M6.798 9.09c0 .72.468 1.188 1.098 1.188.63 0 1.08-.486 1.08-1.188 0-.684-.45-1.152-1.08-1.152-.63 0-1.098.468-1.098 1.152zm-1.944 0c0-1.674 1.386-2.988 3.042-2.988s3.042 1.314 3.042 2.988c0 1.728-1.386 2.988-3.06 2.988-1.674 0-3.024-1.314-3.024-2.988zm10.17 6.156c0 .72.468 1.188 1.098 1.188.63 0 1.08-.486 1.08-1.188 0-.684-.45-1.152-1.08-1.152-.63 0-1.098.468-1.098 1.152zm-1.944 0c0-1.674 1.386-2.988 3.042-2.988s3.042 1.314 3.042 2.988c0 1.728-1.386 2.988-3.06 2.988-1.674 0-3.024-1.314-3.024-2.988zM9.084 18H6.78l8.172-11.682h2.322L9.084 18z\\" class=\\"wd-icon-fill\\"/></g></svg>",
        }
      }
    />
  </button>
  <button
    aria-label="Device View"
    aria-pressed={true}
    className="emotion-4 emotion-2"
    onClick={[Function]}
    value="device-view"
  >
    <span
      className="emotion-0"
      dangerouslySetInnerHTML={
        Object {
          "__html": "<svg xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"24\\" height=\\"24\\" class=\\"wd-icon-device-tablet wd-icon\\" focusable=\\"false\\" role=\\"presentation\\" viewBox=\\"0 0 24 24\\"><g fill-rule=\\"evenodd\\" class=\\"wd-icon-container\\"><path d=\\"M5 3h14v17H5z\\" class=\\"wd-icon-background\\"/><path fill-rule=\\"nonzero\\" d=\\"M6 19h12V4H6v15zM4 2.494C4 2.221 4.226 2 4.496 2h15.008c.274 0 .496.225.496.494v19.012a.498.498 0 0 1-.496.494H4.496A.497.497 0 0 1 4 21.506V2.494zM11 20v1h2v-1h-2z\\" class=\\"wd-icon-fill\\"/></g></svg>",
        }
      }
    />
  </button>
  <button
    aria-label="Table View"
    aria-pressed={false}
    className="emotion-1 emotion-2"
    disabled={true}
    onClick={[Function]}
    value="table-view"
  >
    <span
      className="emotion-0"
      dangerouslySetInnerHTML={
        Object {
          "__html": "<svg xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"24\\" height=\\"24\\" class=\\"wd-icon-worksheets wd-icon\\" focusable=\\"false\\" role=\\"presentation\\" viewBox=\\"0 0 24 24\\"><g fill-rule=\\"evenodd\\" class=\\"wd-icon-container\\"><path d=\\"M5 3h14v18H5z\\" class=\\"wd-icon-background\\"/><path d=\\"M4 2.494C4 2.221 4.226 2 4.496 2h15.008c.274 0 .496.225.496.494v19.012a.498.498 0 0 1-.496.494H4.496A.497.497 0 0 1 4 21.506V2.494zM18 4H6v16h12V4z\\" class=\\"wd-icon-fill\\"/><path d=\\"M17 6v9H7V6h10zm-6 1v1h5V7h-5zM8 7v1h2V7H8zm3 2v1h5V9h-5zm0 2v1h5v-1h-5zm0 2v1h5v-1h-5zM8 9v1h2V9H8zm0 2v1h2v-1H8zm0 2v1h2v-1H8z\\" class=\\"wd-icon-accent\\"/></g></svg>",
        }
      }
    />
  </button>
  <button
    aria-label="List View"
    aria-pressed={false}
    className="emotion-1 emotion-2"
    onClick={[Function]}
    value="list-view"
  >
    <span
      className="emotion-0"
      dangerouslySetInnerHTML={
        Object {
          "__html": "<svg xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"24\\" height=\\"24\\" class=\\"wd-icon-list-view wd-icon\\" focusable=\\"false\\" role=\\"presentation\\" viewBox=\\"0 0 24 24\\"><g fill-rule=\\"evenodd\\" class=\\"wd-icon-container\\"><path d=\\"M3 5.505C3 5.226 3.215 5 3.49 5h3.02c.27 0 .49.214.49.505v.99A.495.495 0 0 1 6.51 7H3.49A.49.49 0 0 1 3 6.495v-.99zm0 4C3 9.226 3.215 9 3.49 9h3.02c.27 0 .49.214.49.505v.99a.495.495 0 0 1-.49.505H3.49a.49.49 0 0 1-.49-.505v-.99zm0 4c0-.279.215-.505.49-.505h3.02c.27 0 .49.214.49.505v.99a.495.495 0 0 1-.49.505H3.49a.49.49 0 0 1-.49-.505v-.99zm0 4c0-.279.215-.505.49-.505h3.02c.27 0 .49.214.49.505v.99a.495.495 0 0 1-.49.505H3.49a.49.49 0 0 1-.49-.505v-.99zm6-12C9 5.226 9.229 5 9.5 5h11c.276 0 .5.214.5.505v.99a.506.506 0 0 1-.5.505h-11a.495.495 0 0 1-.5-.505v-.99zm0 4C9 9.226 9.229 9 9.5 9h11c.276 0 .5.214.5.505v.99a.506.506 0 0 1-.5.505h-11a.495.495 0 0 1-.5-.505v-.99zm0 4c0-.279.229-.505.5-.505h11c.276 0 .5.214.5.505v.99a.506.506 0 0 1-.5.505h-11a.495.495 0 0 1-.5-.505v-.99zm0 4c0-.279.229-.505.5-.505h11c.276 0 .5.214.5.505v.99a.506.506 0 0 1-.5.505h-11a.495.495 0 0 1-.5-.505v-.99z\\" class=\\"wd-icon-fill\\"/></g></svg>",
        }
      }
    />
  </button>
</div>
`;

exports[`Icon Toggle Button Snapshot Toggle buttons with more than two items (using index for value) 1`] = `
.emotion-12 .emotion-2 {
  border-radius: 0;
  border-width: 1px;
  margin-left: -1px;
}

.emotion-12 .emotion-2:first-child {
  border-top-left-radius: 4px;
  border-bottom-left-radius: 4px;
  margin-left: 0;
}

.emotion-12 .emotion-2:last-child {
  border-top-right-radius: 4px;
  border-bottom-right-radius: 4px;
}

.emotion-12 .emotion-2:focus {
  border-radius: 4px;
  z-index: 1;
  -webkit-animation: none;
  animation: none;
  -webkit-transition: all 120ms,border-radius 1ms;
  transition: all 120ms,border-radius 1ms;
}

.emotion-4 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-size: 13px;
  border-radius: 50%;
  border: 1px solid transparent;
  box-shadow: none;
  position: relative;
  cursor: pointer;
  outline: none;
  -webkit-transition: all 120ms linear;
  transition: all 120ms linear;
  border-width: 0px;
  border-radius: 4px;
  width: 32px;
  height: 32px;
  background-color: #f0f1f2;
  border-color: #ced3d9;
  width: 40px;
  height: 40px;
  background-color: #0875e1;
  border-color: #0875e1;
}

.emotion-4:hover:active {
  -webkit-transition-duration: 40ms;
  transition-duration: 40ms;
}

.emotion-4:disabled,
.emotion-4:disabled:active {
  cursor: default;
  box-shadow: none;
}

.emotion-4 .wd-icon {
  display: inline-block;
  vertical-align: middle;
}

.emotion-4 span .wd-icon-fill,
.emotion-4 span .wd-icon-accent {
  -webkit-transition: fill 120ms ease-in;
  transition: fill 120ms ease-in;
  fill: #7b858f;
}

.emotion-4:focus span .wd-icon-fill,
.emotion-4:focus span .wd-icon-accent {
  fill: #7b858f;
}

.emotion-4:hover:focus {
  background-color: #dfe2e6;
}

.emotion-4:active,
.emotion-4:focus:active,
.emotion-4:hover:active {
  background-color: #ced3d9;
}

.emotion-4:hover {
  background-color: #dfe2e6;
}

.emotion-4:hover span .wd-icon-fill,
.emotion-4:hover span .wd-icon-accent {
  fill: #333d47;
}

.emotion-4:disabled,
.emotion-4:active:disabled,
.emotion-4:focus:disabled,
.emotion-4:hover:disabled {
  background-color: #f6f7f8;
}

.emotion-4:disabled span .wd-icon-fill,
.emotion-4:active:disabled span .wd-icon-fill,
.emotion-4:focus:disabled span .wd-icon-fill,
.emotion-4:hover:disabled span .wd-icon-fill,
.emotion-4:disabled span .wd-icon-accent,
.emotion-4:active:disabled span .wd-icon-accent,
.emotion-4:focus:disabled span .wd-icon-accent,
.emotion-4:hover:disabled span .wd-icon-accent {
  fill: #b9c0c7;
}

.emotion-4:not([disabled]):focus,
.emotion-4:not([disabled]):active {
  -webkit-animation: animation-1h1pob6 100ms;
  animation: animation-1h1pob6 100ms;
  box-shadow: 0 0 0 2px #ffffff,0 0 0 4px #0875e1;
}

.emotion-4:focus.emotion-4:hover,
.emotion-4:focus,
.emotion-4:active {
  background-color: #0875e1;
}

.emotion-4:focus.emotion-4:hover:focus span .wd-icon-fill,
.emotion-4:focus:focus span .wd-icon-fill,
.emotion-4:active:focus span .wd-icon-fill,
.emotion-4:focus.emotion-4:hover:hover span .wd-icon-fill,
.emotion-4:focus:hover span .wd-icon-fill,
.emotion-4:active:hover span .wd-icon-fill,
.emotion-4:focus.emotion-4:hover span .wd-icon-fill,
.emotion-4:focus span .wd-icon-fill,
.emotion-4:active span .wd-icon-fill {
  fill: #ffffff;
}

.emotion-4:focus.emotion-4:hover:focus span .wd-icon-accent,
.emotion-4:focus:focus span .wd-icon-accent,
.emotion-4:active:focus span .wd-icon-accent,
.emotion-4:focus.emotion-4:hover:hover span .wd-icon-accent,
.emotion-4:focus:hover span .wd-icon-accent,
.emotion-4:active:hover span .wd-icon-accent,
.emotion-4:focus.emotion-4:hover span .wd-icon-accent,
.emotion-4:focus span .wd-icon-accent,
.emotion-4:active span .wd-icon-accent {
  fill: #ffffff;
}

.emotion-4:not([disabled]):focus {
  -webkit-animation: animation-1h1pob6 100ms;
  animation: animation-1h1pob6 100ms;
  box-shadow: 0 0 0 2px #ffffff,0 0 0 4px #0875e1;
}

.emotion-4:hover {
  background-color: #005cb9;
}

.emotion-4:focus span .wd-icon-fill,
.emotion-4:hover span .wd-icon-fill,
.emotion-4 span .wd-icon-fill {
  fill: #ffffff;
}

.emotion-4:focus span .wd-icon-accent,
.emotion-4:hover span .wd-icon-accent,
.emotion-4 span .wd-icon-accent {
  fill: #ffffff;
}

.emotion-0 {
  display: inline-block;
}

.emotion-0 svg {
  display: block;
}

.emotion-0 .wd-icon-fill {
  fill: #7b858f;
}

.emotion-0:hover .wd-icon-fill {
  fill: #333d47;
}

.emotion-0 .wd-icon-accent {
  fill: #7b858f;
}

.emotion-0:hover .wd-icon-accent {
  fill: #333d47;
}

.emotion-0 .wd-icon-background {
  fill: transparent;
}

.emotion-0:hover .wd-icon-background {
  fill: transparent;
}

.emotion-1 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-size: 13px;
  border-radius: 50%;
  border: 1px solid transparent;
  box-shadow: none;
  position: relative;
  cursor: pointer;
  outline: none;
  -webkit-transition: all 120ms linear;
  transition: all 120ms linear;
  border-width: 0px;
  border-radius: 4px;
  width: 32px;
  height: 32px;
  background-color: #f0f1f2;
  border-color: #ced3d9;
  width: 40px;
  height: 40px;
}

.emotion-1:hover:active {
  -webkit-transition-duration: 40ms;
  transition-duration: 40ms;
}

.emotion-1:disabled,
.emotion-1:disabled:active {
  cursor: default;
  box-shadow: none;
}

.emotion-1 .wd-icon {
  display: inline-block;
  vertical-align: middle;
}

.emotion-1 span .wd-icon-fill,
.emotion-1 span .wd-icon-accent {
  -webkit-transition: fill 120ms ease-in;
  transition: fill 120ms ease-in;
  fill: #7b858f;
}

.emotion-1:focus span .wd-icon-fill,
.emotion-1:focus span .wd-icon-accent {
  fill: #7b858f;
}

.emotion-1:hover:focus {
  background-color: #dfe2e6;
}

.emotion-1:active,
.emotion-1:focus:active,
.emotion-1:hover:active {
  background-color: #ced3d9;
}

.emotion-1:hover {
  background-color: #dfe2e6;
}

.emotion-1:hover span .wd-icon-fill,
.emotion-1:hover span .wd-icon-accent {
  fill: #333d47;
}

.emotion-1:disabled,
.emotion-1:active:disabled,
.emotion-1:focus:disabled,
.emotion-1:hover:disabled {
  background-color: #f6f7f8;
}

.emotion-1:disabled span .wd-icon-fill,
.emotion-1:active:disabled span .wd-icon-fill,
.emotion-1:focus:disabled span .wd-icon-fill,
.emotion-1:hover:disabled span .wd-icon-fill,
.emotion-1:disabled span .wd-icon-accent,
.emotion-1:active:disabled span .wd-icon-accent,
.emotion-1:focus:disabled span .wd-icon-accent,
.emotion-1:hover:disabled span .wd-icon-accent {
  fill: #b9c0c7;
}

.emotion-1:not([disabled]):focus,
.emotion-1:not([disabled]):active {
  -webkit-animation: animation-1h1pob6 100ms;
  animation: animation-1h1pob6 100ms;
  box-shadow: 0 0 0 2px #ffffff,0 0 0 4px #0875e1;
}

<div
  className="emotion-12 emotion-13"
>
  <button
    aria-label="List View"
    aria-pressed={false}
    className="emotion-1 emotion-2"
    onClick={[Function]}
    value="list-view"
  >
    <span
      className="emotion-0"
      dangerouslySetInnerHTML={
        Object {
          "__html": "<svg xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"24\\" height=\\"24\\" class=\\"wd-icon-list-view wd-icon\\" focusable=\\"false\\" role=\\"presentation\\" viewBox=\\"0 0 24 24\\"><g fill-rule=\\"evenodd\\" class=\\"wd-icon-container\\"><path d=\\"M3 5.505C3 5.226 3.215 5 3.49 5h3.02c.27 0 .49.214.49.505v.99A.495.495 0 0 1 6.51 7H3.49A.49.49 0 0 1 3 6.495v-.99zm0 4C3 9.226 3.215 9 3.49 9h3.02c.27 0 .49.214.49.505v.99a.495.495 0 0 1-.49.505H3.49a.49.49 0 0 1-.49-.505v-.99zm0 4c0-.279.215-.505.49-.505h3.02c.27 0 .49.214.49.505v.99a.495.495 0 0 1-.49.505H3.49a.49.49 0 0 1-.49-.505v-.99zm0 4c0-.279.215-.505.49-.505h3.02c.27 0 .49.214.49.505v.99a.495.495 0 0 1-.49.505H3.49a.49.49 0 0 1-.49-.505v-.99zm6-12C9 5.226 9.229 5 9.5 5h11c.276 0 .5.214.5.505v.99a.506.506 0 0 1-.5.505h-11a.495.495 0 0 1-.5-.505v-.99zm0 4C9 9.226 9.229 9 9.5 9h11c.276 0 .5.214.5.505v.99a.506.506 0 0 1-.5.505h-11a.495.495 0 0 1-.5-.505v-.99zm0 4c0-.279.229-.505.5-.505h11c.276 0 .5.214.5.505v.99a.506.506 0 0 1-.5.505h-11a.495.495 0 0 1-.5-.505v-.99zm0 4c0-.279.229-.505.5-.505h11c.276 0 .5.214.5.505v.99a.506.506 0 0 1-.5.505h-11a.495.495 0 0 1-.5-.505v-.99z\\" class=\\"wd-icon-fill\\"/></g></svg>",
        }
      }
    />
  </button>
  <button
    aria-label="Table View"
    aria-pressed={true}
    className="emotion-4 emotion-2"
    onClick={[Function]}
    value="table-view"
  >
    <span
      className="emotion-0"
      dangerouslySetInnerHTML={
        Object {
          "__html": "<svg xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"24\\" height=\\"24\\" class=\\"wd-icon-worksheets wd-icon\\" focusable=\\"false\\" role=\\"presentation\\" viewBox=\\"0 0 24 24\\"><g fill-rule=\\"evenodd\\" class=\\"wd-icon-container\\"><path d=\\"M5 3h14v18H5z\\" class=\\"wd-icon-background\\"/><path d=\\"M4 2.494C4 2.221 4.226 2 4.496 2h15.008c.274 0 .496.225.496.494v19.012a.498.498 0 0 1-.496.494H4.496A.497.497 0 0 1 4 21.506V2.494zM18 4H6v16h12V4z\\" class=\\"wd-icon-fill\\"/><path d=\\"M17 6v9H7V6h10zm-6 1v1h5V7h-5zM8 7v1h2V7H8zm3 2v1h5V9h-5zm0 2v1h5v-1h-5zm0 2v1h5v-1h-5zM8 9v1h2V9H8zm0 2v1h2v-1H8zm0 2v1h2v-1H8z\\" class=\\"wd-icon-accent\\"/></g></svg>",
        }
      }
    />
  </button>
  <button
    aria-label="Device View"
    aria-pressed={false}
    className="emotion-1 emotion-2"
    onClick={[Function]}
    value="device-view"
  >
    <span
      className="emotion-0"
      dangerouslySetInnerHTML={
        Object {
          "__html": "<svg xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"24\\" height=\\"24\\" class=\\"wd-icon-device-tablet wd-icon\\" focusable=\\"false\\" role=\\"presentation\\" viewBox=\\"0 0 24 24\\"><g fill-rule=\\"evenodd\\" class=\\"wd-icon-container\\"><path d=\\"M5 3h14v17H5z\\" class=\\"wd-icon-background\\"/><path fill-rule=\\"nonzero\\" d=\\"M6 19h12V4H6v15zM4 2.494C4 2.221 4.226 2 4.496 2h15.008c.274 0 .496.225.496.494v19.012a.498.498 0 0 1-.496.494H4.496A.497.497 0 0 1 4 21.506V2.494zM11 20v1h2v-1h-2z\\" class=\\"wd-icon-fill\\"/></g></svg>",
        }
      }
    />
  </button>
  <button
    aria-label="Percent View"
    aria-pressed={false}
    className="emotion-1 emotion-2"
    onClick={[Function]}
    value="percent-view"
  >
    <span
      className="emotion-0"
      dangerouslySetInnerHTML={
        Object {
          "__html": "<svg xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"24\\" height=\\"24\\" class=\\"wd-icon-percentage wd-icon\\" focusable=\\"false\\" role=\\"presentation\\" viewBox=\\"0 0 24 24\\"><g fill-rule=\\"evenodd\\" class=\\"wd-icon-container\\"><path d=\\"M6.798 9.09c0 .72.468 1.188 1.098 1.188.63 0 1.08-.486 1.08-1.188 0-.684-.45-1.152-1.08-1.152-.63 0-1.098.468-1.098 1.152zm-1.944 0c0-1.674 1.386-2.988 3.042-2.988s3.042 1.314 3.042 2.988c0 1.728-1.386 2.988-3.06 2.988-1.674 0-3.024-1.314-3.024-2.988zm10.17 6.156c0 .72.468 1.188 1.098 1.188.63 0 1.08-.486 1.08-1.188 0-.684-.45-1.152-1.08-1.152-.63 0-1.098.468-1.098 1.152zm-1.944 0c0-1.674 1.386-2.988 3.042-2.988s3.042 1.314 3.042 2.988c0 1.728-1.386 2.988-3.06 2.988-1.674 0-3.024-1.314-3.024-2.988zM9.084 18H6.78l8.172-11.682h2.322L9.084 18z\\" class=\\"wd-icon-fill\\"/></g></svg>",
        }
      }
    />
  </button>
</div>
`;

exports[`Icon Toggle Button Snapshot two buttons render as expected (w/ first selected) 1`] = `
.emotion-6 .emotion-2 {
  border-radius: 0;
  border-width: 1px;
  margin-left: -1px;
}

.emotion-6 .emotion-2:first-child {
  border-top-left-radius: 4px;
  border-bottom-left-radius: 4px;
  margin-left: 0;
}

.emotion-6 .emotion-2:last-child {
  border-top-right-radius: 4px;
  border-bottom-right-radius: 4px;
}

.emotion-6 .emotion-2:focus {
  border-radius: 4px;
  z-index: 1;
  -webkit-animation: none;
  animation: none;
  -webkit-transition: all 120ms,border-radius 1ms;
  transition: all 120ms,border-radius 1ms;
}

.emotion-1 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-size: 13px;
  border-radius: 50%;
  border: 1px solid transparent;
  box-shadow: none;
  position: relative;
  cursor: pointer;
  outline: none;
  -webkit-transition: all 120ms linear;
  transition: all 120ms linear;
  border-width: 0px;
  border-radius: 4px;
  width: 32px;
  height: 32px;
  background-color: #f0f1f2;
  border-color: #ced3d9;
  width: 40px;
  height: 40px;
  background-color: #0875e1;
  border-color: #0875e1;
}

.emotion-1:hover:active {
  -webkit-transition-duration: 40ms;
  transition-duration: 40ms;
}

.emotion-1:disabled,
.emotion-1:disabled:active {
  cursor: default;
  box-shadow: none;
}

.emotion-1 .wd-icon {
  display: inline-block;
  vertical-align: middle;
}

.emotion-1 span .wd-icon-fill,
.emotion-1 span .wd-icon-accent {
  -webkit-transition: fill 120ms ease-in;
  transition: fill 120ms ease-in;
  fill: #7b858f;
}

.emotion-1:focus span .wd-icon-fill,
.emotion-1:focus span .wd-icon-accent {
  fill: #7b858f;
}

.emotion-1:hover:focus {
  background-color: #dfe2e6;
}

.emotion-1:active,
.emotion-1:focus:active,
.emotion-1:hover:active {
  background-color: #ced3d9;
}

.emotion-1:hover {
  background-color: #dfe2e6;
}

.emotion-1:hover span .wd-icon-fill,
.emotion-1:hover span .wd-icon-accent {
  fill: #333d47;
}

.emotion-1:disabled,
.emotion-1:active:disabled,
.emotion-1:focus:disabled,
.emotion-1:hover:disabled {
  background-color: #f6f7f8;
}

.emotion-1:disabled span .wd-icon-fill,
.emotion-1:active:disabled span .wd-icon-fill,
.emotion-1:focus:disabled span .wd-icon-fill,
.emotion-1:hover:disabled span .wd-icon-fill,
.emotion-1:disabled span .wd-icon-accent,
.emotion-1:active:disabled span .wd-icon-accent,
.emotion-1:focus:disabled span .wd-icon-accent,
.emotion-1:hover:disabled span .wd-icon-accent {
  fill: #b9c0c7;
}

.emotion-1:not([disabled]):focus,
.emotion-1:not([disabled]):active {
  -webkit-animation: animation-1h1pob6 100ms;
  animation: animation-1h1pob6 100ms;
  box-shadow: 0 0 0 2px #ffffff,0 0 0 4px #0875e1;
}

.emotion-1:focus.emotion-1:hover,
.emotion-1:focus,
.emotion-1:active {
  background-color: #0875e1;
}

.emotion-1:focus.emotion-1:hover:focus span .wd-icon-fill,
.emotion-1:focus:focus span .wd-icon-fill,
.emotion-1:active:focus span .wd-icon-fill,
.emotion-1:focus.emotion-1:hover:hover span .wd-icon-fill,
.emotion-1:focus:hover span .wd-icon-fill,
.emotion-1:active:hover span .wd-icon-fill,
.emotion-1:focus.emotion-1:hover span .wd-icon-fill,
.emotion-1:focus span .wd-icon-fill,
.emotion-1:active span .wd-icon-fill {
  fill: #ffffff;
}

.emotion-1:focus.emotion-1:hover:focus span .wd-icon-accent,
.emotion-1:focus:focus span .wd-icon-accent,
.emotion-1:active:focus span .wd-icon-accent,
.emotion-1:focus.emotion-1:hover:hover span .wd-icon-accent,
.emotion-1:focus:hover span .wd-icon-accent,
.emotion-1:active:hover span .wd-icon-accent,
.emotion-1:focus.emotion-1:hover span .wd-icon-accent,
.emotion-1:focus span .wd-icon-accent,
.emotion-1:active span .wd-icon-accent {
  fill: #ffffff;
}

.emotion-1:not([disabled]):focus {
  -webkit-animation: animation-1h1pob6 100ms;
  animation: animation-1h1pob6 100ms;
  box-shadow: 0 0 0 2px #ffffff,0 0 0 4px #0875e1;
}

.emotion-1:hover {
  background-color: #005cb9;
}

.emotion-1:focus span .wd-icon-fill,
.emotion-1:hover span .wd-icon-fill,
.emotion-1 span .wd-icon-fill {
  fill: #ffffff;
}

.emotion-1:focus span .wd-icon-accent,
.emotion-1:hover span .wd-icon-accent,
.emotion-1 span .wd-icon-accent {
  fill: #ffffff;
}

.emotion-0 {
  display: inline-block;
}

.emotion-0 svg {
  display: block;
}

.emotion-0 .wd-icon-fill {
  fill: #7b858f;
}

.emotion-0:hover .wd-icon-fill {
  fill: #333d47;
}

.emotion-0 .wd-icon-accent {
  fill: #7b858f;
}

.emotion-0:hover .wd-icon-accent {
  fill: #333d47;
}

.emotion-0 .wd-icon-background {
  fill: transparent;
}

.emotion-0:hover .wd-icon-background {
  fill: transparent;
}

.emotion-4 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-size: 13px;
  border-radius: 50%;
  border: 1px solid transparent;
  box-shadow: none;
  position: relative;
  cursor: pointer;
  outline: none;
  -webkit-transition: all 120ms linear;
  transition: all 120ms linear;
  border-width: 0px;
  border-radius: 4px;
  width: 32px;
  height: 32px;
  background-color: #f0f1f2;
  border-color: #ced3d9;
  width: 40px;
  height: 40px;
}

.emotion-4:hover:active {
  -webkit-transition-duration: 40ms;
  transition-duration: 40ms;
}

.emotion-4:disabled,
.emotion-4:disabled:active {
  cursor: default;
  box-shadow: none;
}

.emotion-4 .wd-icon {
  display: inline-block;
  vertical-align: middle;
}

.emotion-4 span .wd-icon-fill,
.emotion-4 span .wd-icon-accent {
  -webkit-transition: fill 120ms ease-in;
  transition: fill 120ms ease-in;
  fill: #7b858f;
}

.emotion-4:focus span .wd-icon-fill,
.emotion-4:focus span .wd-icon-accent {
  fill: #7b858f;
}

.emotion-4:hover:focus {
  background-color: #dfe2e6;
}

.emotion-4:active,
.emotion-4:focus:active,
.emotion-4:hover:active {
  background-color: #ced3d9;
}

.emotion-4:hover {
  background-color: #dfe2e6;
}

.emotion-4:hover span .wd-icon-fill,
.emotion-4:hover span .wd-icon-accent {
  fill: #333d47;
}

.emotion-4:disabled,
.emotion-4:active:disabled,
.emotion-4:focus:disabled,
.emotion-4:hover:disabled {
  background-color: #f6f7f8;
}

.emotion-4:disabled span .wd-icon-fill,
.emotion-4:active:disabled span .wd-icon-fill,
.emotion-4:focus:disabled span .wd-icon-fill,
.emotion-4:hover:disabled span .wd-icon-fill,
.emotion-4:disabled span .wd-icon-accent,
.emotion-4:active:disabled span .wd-icon-accent,
.emotion-4:focus:disabled span .wd-icon-accent,
.emotion-4:hover:disabled span .wd-icon-accent {
  fill: #b9c0c7;
}

.emotion-4:not([disabled]):focus,
.emotion-4:not([disabled]):active {
  -webkit-animation: animation-1h1pob6 100ms;
  animation: animation-1h1pob6 100ms;
  box-shadow: 0 0 0 2px #ffffff,0 0 0 4px #0875e1;
}

<div
  className="emotion-6 emotion-7"
>
  <button
    aria-label="List View"
    aria-pressed={true}
    className="emotion-1 emotion-2"
    onClick={[Function]}
    value="list-view"
  >
    <span
      className="emotion-0"
      dangerouslySetInnerHTML={
        Object {
          "__html": "<svg xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"24\\" height=\\"24\\" class=\\"wd-icon-list-view wd-icon\\" focusable=\\"false\\" role=\\"presentation\\" viewBox=\\"0 0 24 24\\"><g fill-rule=\\"evenodd\\" class=\\"wd-icon-container\\"><path d=\\"M3 5.505C3 5.226 3.215 5 3.49 5h3.02c.27 0 .49.214.49.505v.99A.495.495 0 0 1 6.51 7H3.49A.49.49 0 0 1 3 6.495v-.99zm0 4C3 9.226 3.215 9 3.49 9h3.02c.27 0 .49.214.49.505v.99a.495.495 0 0 1-.49.505H3.49a.49.49 0 0 1-.49-.505v-.99zm0 4c0-.279.215-.505.49-.505h3.02c.27 0 .49.214.49.505v.99a.495.495 0 0 1-.49.505H3.49a.49.49 0 0 1-.49-.505v-.99zm0 4c0-.279.215-.505.49-.505h3.02c.27 0 .49.214.49.505v.99a.495.495 0 0 1-.49.505H3.49a.49.49 0 0 1-.49-.505v-.99zm6-12C9 5.226 9.229 5 9.5 5h11c.276 0 .5.214.5.505v.99a.506.506 0 0 1-.5.505h-11a.495.495 0 0 1-.5-.505v-.99zm0 4C9 9.226 9.229 9 9.5 9h11c.276 0 .5.214.5.505v.99a.506.506 0 0 1-.5.505h-11a.495.495 0 0 1-.5-.505v-.99zm0 4c0-.279.229-.505.5-.505h11c.276 0 .5.214.5.505v.99a.506.506 0 0 1-.5.505h-11a.495.495 0 0 1-.5-.505v-.99zm0 4c0-.279.229-.505.5-.505h11c.276 0 .5.214.5.505v.99a.506.506 0 0 1-.5.505h-11a.495.495 0 0 1-.5-.505v-.99z\\" class=\\"wd-icon-fill\\"/></g></svg>",
        }
      }
    />
  </button>
  <button
    aria-label="Table View"
    aria-pressed={false}
    className="emotion-4 emotion-2"
    onClick={[Function]}
    value="table-view"
  >
    <span
      className="emotion-0"
      dangerouslySetInnerHTML={
        Object {
          "__html": "<svg xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"24\\" height=\\"24\\" class=\\"wd-icon-worksheets wd-icon\\" focusable=\\"false\\" role=\\"presentation\\" viewBox=\\"0 0 24 24\\"><g fill-rule=\\"evenodd\\" class=\\"wd-icon-container\\"><path d=\\"M5 3h14v18H5z\\" class=\\"wd-icon-background\\"/><path d=\\"M4 2.494C4 2.221 4.226 2 4.496 2h15.008c.274 0 .496.225.496.494v19.012a.498.498 0 0 1-.496.494H4.496A.497.497 0 0 1 4 21.506V2.494zM18 4H6v16h12V4z\\" class=\\"wd-icon-fill\\"/><path d=\\"M17 6v9H7V6h10zm-6 1v1h5V7h-5zM8 7v1h2V7H8zm3 2v1h5V9h-5zm0 2v1h5v-1h-5zm0 2v1h5v-1h-5zM8 9v1h2V9H8zm0 2v1h2v-1H8zm0 2v1h2v-1H8z\\" class=\\"wd-icon-accent\\"/></g></svg>",
        }
      }
    />
  </button>
</div>
`;
